expand member objects (added asset summary) fixed sweetalert2's z-index added global member position added assigning assets to members

--- a/static/assets/css/custom.css
+++ b/static/assets/css/custom.css
@@ -16,6 +16,7 @@ body {
 
 .swal2-container {
     zoom: 1.5 !important;
+    z-index: 10050 !important; /* bigger than modal's z-index*/
 }
 
 /* Table */
